--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,2 @@
 error.excludes_all_charsets=The combination of parameters in the request is not allowed. Please validate your input and retry your request.
+error.secret_not_found=Secret not found. Please validate your input and retry your request.
