Use "error" rather than "message" as the JSON key for an error message because Spring prefers it.
[#119772789] User should receive error if all char type params are set to false

Signed-off-by: Philip Kuryloski <pkuryloski@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 error.excludes_all_charsets=The combination of parameters in the request is not allowed. Please validate your input and retry your request.
 error.secret_not_found=Secret not found. Please validate your input and retry your request.
+error.secret_type_invalid=The request does not include a valid type. Please validate your input and retry your request.
