--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 error.excludes_all_charsets=The combination of parameters in the request is not allowed. Please validate your input and retry your request.
 error.secret_not_found=Secret not found. Please validate your input and retry your request.
 error.secret_type_invalid=The request does not include a valid type. Please validate your input and retry your request.
+error.missing_string_secret_value=A non-empty value must be specified for the credential. Please validate and retry your request.
