Updated the error message when no certificate text is provided.
[#120716361] User should be required to provide at least one certificate value

Signed-off-by: Stu Pollock <spollock@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,4 +2,4 @@ error.excludes_all_charsets=The combination of parameters in the request is not 
 error.secret_not_found=Secret not found. Please validate your input and retry your request.
 error.secret_type_invalid=The request does not include a valid type. Please validate your input and retry your request.
 error.missing_string_secret_value=A non-empty value must be specified for the credential. Please validate and retry your request.
-error.missing_string_secret_certificate_credentials=A non-empty value must be specified for any of CA, Public, or Private. Please validate and retry your request.
+error.missing_string_secret_certificate_credentials=At least one certificate type must be set. Please validate your input and retry your request.
