--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,4 @@ error.secret_type_invalid=The request does not include a valid type. Please vali
 error.missing_string_secret_value=A non-empty value must be specified for the credential. Please validate and retry your request.
 error.missing_certificate_credentials=At least one certificate type must be set. Please validate your input and retry your request.
 error.missing_certificate_parameters=Organization, state and country are required to generate a certificate. Please add these parameters and retry your request.
+error.invalid_key_length=The provided key length is not supported. Please validate your input and retry your request.
