--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,4 @@ error.missing_string_secret_value=A non-empty value must be specified for the cr
 error.missing_certificate_credentials=At least one certificate type must be set. Please validate your input and retry your request.
 error.missing_certificate_parameters=Organization, state and country are required to generate a certificate. Please add these parameters and retry your request.
 error.invalid_key_length=The provided key length is not supported. Please validate your input and retry your request.
+error.invalid_alternate_name=A provided alternative name is not a valid hostname or IP address. Please update this value and retry your request.
