Server supports CA get requests
[#121266635] User should be able to get stored root CA

Signed-off-by: Larry Hamel <lhamel@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,3 +7,4 @@ error.missing_certificate_parameters=Organization, state and country are require
 error.invalid_key_length=The provided key length is not supported. Please validate your input and retry your request.
 error.invalid_alternate_name=A provided alternative name is not a valid hostname or IP address. Please update this value and retry your request.
 error.invalid_duration=Invalid duration specified. The supported duration values are whole numbers between 1-3650.
+error.ca_not_found=CA not found. Please validate your input and retry your request.
