Return 400 when doing ca-set with only one key
[#120717269] User should receive error if providing overlapping certificate string and file parameters

Signed-off-by: Nitya Dhanushkodi <ndhanushkodi@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ error.secret_not_found=Secret not found. Please validate your input and retry yo
 error.secret_type_invalid=The request does not include a valid type. Please validate your input and retry your request.
 error.missing_string_secret_value=A non-empty value must be specified for the credential. Please validate and retry your request.
 error.missing_certificate_credentials=At least one certificate type must be set. Please validate your input and retry your request.
+error.missing_ca_credentials=All keys are required to set a CA. Please validate your input and retry your request.
 error.missing_certificate_parameters=Organization, state and country are required to generate a certificate. Please add these parameters and retry your request.
 error.invalid_key_length=The provided key length is not supported. Please validate your input and retry your request.
 error.invalid_alternate_name=A provided alternative name is not a valid hostname or IP address. Please update this value and retry your request.
