add error message if user has not set a default CA
[#123966901] User should receive error if attempting to generate a certificate with the default CA when the default CA is not set

Signed-off-by: Nitya Dhanushkodi <ndhanushkodi@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,3 +9,4 @@ error.invalid_key_length=The provided key length is not supported. Please valida
 error.invalid_alternate_name=A provided alternative name is not a valid hostname or IP address. Please update this value and retry your request.
 error.invalid_duration=Invalid duration specified. The supported duration values are whole numbers between 1-3650.
 error.ca_not_found=CA not found. Please validate your input and retry your request.
+error.default_ca_required=The request could not be completed because a default CA has not been defined. Please set a default CA or provide a named CA and retry your request.
