Return 400 when setting credential with the same name but different type
[#118684309] Credential updates that change types should result in error

Signed-off-by: Larry Hamel <lhamel@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,3 +10,4 @@ error.invalid_alternate_name=A provided alternative name is not a valid hostname
 error.invalid_duration=Invalid duration specified. The supported duration values are whole numbers between 1-3650.
 error.ca_not_found=CA not found. Please validate your input and retry your request.
 error.default_ca_required=The request could not be completed because a default CA has not been defined. Please set a default CA or provide a named CA and retry your request.
+error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
