--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,3 +11,4 @@ error.invalid_duration=Invalid duration specified. The supported duration values
 error.ca_not_found=CA not found. Please validate your input and retry your request.
 error.default_ca_required=The request could not be completed because a default CA has not been defined. Please set a default CA or provide a named CA and retry your request.
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
+error.bad_authority_type=The request does not include a valid type. Please validate your input and retry your request.
