--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,3 +12,4 @@ error.ca_not_found=CA not found. Please validate your input and retry your reque
 error.default_ca_required=The request could not be completed because a default CA has not been defined. Please set a default CA or provide a named CA and retry your request.
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
 error.bad_authority_type=The request does not include a valid type. Please validate your input and retry your request.
+error.ca_not_found_for_certificate_generation=The request could not be completed because the CA has not been defined. Please set the CA and retry your request.
