--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,7 +4,7 @@ error.type_invalid=The request does not include a valid type. Please validate yo
 error.missing_string_secret_value=A non-empty value must be specified for the credential. Please validate and retry your request.
 error.missing_certificate_credentials=At least one certificate type must be set. Please validate your input and retry your request.
 error.missing_ca_credentials=All keys are required to set a CA. Please validate your input and retry your request.
-error.missing_certificate_parameters=Organization, state and country are required to generate a certificate. Please add these parameters and retry your request.
+error.missing_certificate_parameters=At least one subject value, such as common name or organization, must be defined to generate the certificate. Please update and retry your request.
 error.invalid_key_length=The provided key length is not supported. Please validate your input and retry your request.
 error.invalid_alternate_name=A provided alternative name is not a valid hostname or IP address. Please update this value and retry your request.
 error.invalid_duration=Invalid duration specified. The supported duration values are whole numbers between 1-3650.
