Add postgres db support and dynamically interpret
-db type in application

[#118801575] User should be able to deploy CM with configuration for in-memory database

Signed-off-by: Nitya Dhanushkodi <ndhanushkodi@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,3 +13,4 @@ error.default_ca_required=The request could not be completed because a default C
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
 error.bad_authority_type=The request does not include a valid type. Please validate your input and retry your request.
 error.ca_not_found_for_certificate_generation=The request could not be completed because the CA has not been defined. Please set the CA and retry your request.
+error.postgres_requires_credentials=Using a postgres database requires a username.
