--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,3 +14,4 @@ error.type_mismatch=The credential type cannot be modified. Please delete the cr
 error.bad_authority_type=The request does not include a valid type. Please validate your input and retry your request.
 error.ca_not_found_for_certificate_generation=The request could not be completed because the CA has not been defined. Please set the CA and retry your request.
 error.database_requires_credentials=Using mysql or postgres requires a username.
+error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
