--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,3 +15,4 @@ error.bad_authority_type=The request does not include a valid type. Please valid
 error.ca_not_found_for_certificate_generation=The request could not be completed because the CA has not been defined. Please set the CA and retry your request.
 error.database_requires_credentials=Using mysql or postgres requires a username.
 error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
+error.invalid_json_key=The request includes an unrecognized parameter ''{0}''. Please update or remove this parameter and retry your request.
