--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,6 +13,6 @@ error.default_ca_required=The request could not be completed because a default C
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
 error.bad_authority_type=The request does not include a valid type. Please validate your input and retry your request.
 error.ca_not_found_for_certificate_generation=The request could not be completed because the CA has not been defined. Please set the CA and retry your request.
-error.database_requires_credentials=Using mysql or postgres requires a username.
 error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
 error.invalid_json_key=The request includes an unrecognized parameter ''{0}''. Please update or remove this parameter and retry your request.
+error.invalid_name_has_slash=A credential name cannot start or end with a '/' character. Credential names should be in the form of [path]/[name]. Please update and retry your request.
