--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,3 +16,4 @@ error.ca_not_found_for_certificate_generation=The request could not be completed
 error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
 error.invalid_json_key=The request includes an unrecognized parameter ''{0}''. Please update or remove this parameter and retry your request.
 error.invalid_name_has_slash=A credential name cannot start or end with a '/' character. Credential names should be in the form of [path]/[name]. Please update and retry your request.
+error.invalid_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
