Validate ssh parameters to include at least one key
[finishes #130700173] User should be required to specify at least one SSH value

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,3 +17,4 @@ error.audit_save_failure=The request could not be completed. Please contact your
 error.invalid_json_key=The request includes an unrecognized parameter ''{0}''. Please update or remove this parameter and retry your request.
 error.invalid_name_has_slash=A credential name cannot start or end with a '/' character. Credential names should be in the form of [path]/[name]. Please update and retry your request.
 error.invalid_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
+error.missing_ssh_parameters=At least one ssh key must be set. Please validate your input and retry your request.
