Passwords can be generated with only hex characters
[Finishes #131585619] User should be able to generate password with hex charset

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,3 +19,4 @@ error.invalid_name_has_slash=A credential name cannot start or end with a '/' ch
 error.invalid_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
 error.missing_rsa_ssh_parameters=At least one key value must be set. Please validate your input and retry your request.
 error.invalid_regenerate_parameters=No other parameters may be specified in combination with regenerate.
+error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
