Forbid regenerating statically-set passwords
[#127320195] User should receive error if regenerating password or certificate credential that was statically set

Signed-off-by: Rick Kawala <rkawala@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,3 +20,4 @@ error.invalid_generate_type=Credentials of this type cannot be generated. Please
 error.missing_rsa_ssh_parameters=At least one key value must be set. Please validate your input and retry your request.
 error.invalid_regenerate_parameters=No other parameters may be specified in combination with regenerate.
 error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
+error.cannot_regenerated_non_generated_credentials=The credential could not be regenerated because the value was statically set. Only generated credentials may be regenerated.
