--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,3 +21,4 @@ error.missing_rsa_ssh_parameters=At least one key value must be set. Please vali
 error.invalid_regenerate_parameters=No other parameters may be specified in combination with regenerate.
 error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
 error.cannot_regenerate_non_generated_credentials=The credential could not be regenerated because the value was statically set. Only generated credentials may be regenerated.
+error.no_identifier=Missing identifier. Please validate your input and retry your request.
