Provide useful error message if token signature is mismatched
[#133276689] Credhub CLI should return descriptive error when uaa verification key cannot verify token signature

Signed-off-by: Stu Pollock <spollock@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,3 +22,4 @@ error.invalid_regenerate_parameters=No other parameters may be specified in comb
 error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
 error.cannot_regenerate_non_generated_credentials=The credential could not be regenerated because the value was statically set. Only generated credentials may be regenerated.
 error.no_identifier=Missing identifier. Please validate your input and retry your request.
+error.invalid_token_signature=The request token signature could not be verified. Please validate that your request token was issued by the UAA server authorized by CredHub.
