--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,25 +1,26 @@
-error.excludes_all_charsets=The combination of parameters in the request is not allowed. Please validate your input and retry your request.
+error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
+error.bad_authority_type=The request does not include a valid type. Please validate your input and retry your request.
+error.ca_name_missing=A CA name must be provided. Please validate your input and retry your request.
+error.ca_not_found=CA not found. Please validate your input and retry your request.
+error.ca_not_found_for_certificate_generation=The request could not be completed because the CA has not been defined. Please set the CA and retry your request.
+error.cannot_regenerate_non_generated_credentials=The credential could not be regenerated because the value was statically set. Only generated credentials may be regenerated.
 error.credential_not_found=Credential not found. Please validate your input and retry your request.
-error.type_invalid=The request does not include a valid type. Please validate your input and retry your request.
-error.missing_string_secret_value=A non-empty value must be specified for the credential. Please validate and retry your request.
-error.missing_certificate_credentials=At least one certificate type must be set. Please validate your input and retry your request.
-error.missing_ca_credentials=All keys are required to set a CA. Please validate your input and retry your request.
-error.missing_certificate_parameters=At least one subject value, such as common name or organization, must be defined to generate the certificate. Please update and retry your request.
-error.invalid_key_length=The provided key length is not supported. Please validate your input and retry your request.
+error.default_ca_required=The request could not be completed because a default CA has not been defined. Please set a default CA or provide a named CA and retry your request.
+error.excludes_all_charsets=The combination of parameters in the request is not allowed. Please validate your input and retry your request.
+error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
 error.invalid_alternate_name=A provided alternative name is not a valid hostname or IP address. Please update this value and retry your request.
 error.invalid_duration=Invalid duration specified. The supported duration values are whole numbers between 1-3650.
-error.ca_not_found=CA not found. Please validate your input and retry your request.
-error.default_ca_required=The request could not be completed because a default CA has not been defined. Please set a default CA or provide a named CA and retry your request.
-error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
-error.bad_authority_type=The request does not include a valid type. Please validate your input and retry your request.
-error.ca_not_found_for_certificate_generation=The request could not be completed because the CA has not been defined. Please set the CA and retry your request.
-error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
-error.invalid_json_key=The request includes an unrecognized parameter ''{0}''. Please update or remove this parameter and retry your request.
-error.invalid_name_has_slash=A credential name cannot start or end with a '/' character. Credential names should be in the form of [path]/[name]. Please update and retry your request.
 error.invalid_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
-error.missing_rsa_ssh_parameters=At least one key value must be set. Please validate your input and retry your request.
+error.invalid_json_key=The request includes an unrecognized parameter ''{0}''. Please update or remove this parameter and retry your request.
+error.invalid_key_length=The provided key length is not supported. Please validate your input and retry your request.
+error.invalid_name_has_slash=A credential name cannot start or end with a '/' character. Credential names should be in the form of [path]/[name]. Please update and retry your request.
 error.invalid_regenerate_parameters=No other parameters may be specified in combination with regenerate.
-error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
-error.cannot_regenerate_non_generated_credentials=The credential could not be regenerated because the value was statically set. Only generated credentials may be regenerated.
-error.no_identifier=Missing identifier. Please validate your input and retry your request.
 error.invalid_token_signature=The request token signature could not be verified. Please validate that your request token was issued by the UAA server authorized by CredHub.
+error.missing_ca_credentials=All keys are required to set a CA. Please validate your input and retry your request.
+error.missing_certificate_credentials=At least one certificate type must be set. Please validate your input and retry your request.
+error.missing_certificate_parameters=At least one subject value, such as common name or organization, must be defined to generate the certificate. Please update and retry your request.
+error.missing_rsa_ssh_parameters=At least one key value must be set. Please validate your input and retry your request.
+error.missing_string_secret_value=A non-empty value must be specified for the credential. Please validate and retry your request.
+error.no_identifier=Missing identifier. Please validate your input and retry your request.
+error.type_invalid=The request does not include a valid type. Please validate your input and retry your request.
+error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
