add new error message

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,6 +19,7 @@ error.invalid_token_signature=The request token signature could not be verified.
 error.missing_ca_credentials=All keys are required to set a CA. Please validate your input and retry your request.
 error.missing_certificate_credentials=At least one certificate type must be set. Please validate your input and retry your request.
 error.missing_certificate_parameters=At least one subject value, such as common name or organization, must be defined to generate the certificate. Please update and retry your request.
+error.missing_name=A credential name must be provided. Please validate your input and retry your request.
 error.missing_rsa_ssh_parameters=At least one key value must be set. Please validate your input and retry your request.
 error.missing_string_secret_value=A non-empty value must be specified for the credential. Please validate and retry your request.
 error.no_identifier=Missing identifier. Please validate your input and retry your request.
