Add support for extended key usage in certs
[#136928185] Users should be able to set extended key usage settings when generating certificates

Signed-off-by: Sebastian Wittenkamp <swittenkamp@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ error.default_ca_required=The request could not be completed because a default C
 error.excludes_all_charsets=The combination of parameters in the request is not allowed. Please validate your input and retry your request.
 error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
 error.invalid_alternate_name=A provided alternative name is not a valid hostname or IP address. Please update this value and retry your request.
+error.invalid_extended_key_usage=The provided extended key usage ''{0}'' was not known. Please update this value and retry your request.
 error.invalid_duration=Invalid duration specified. The supported duration values are whole numbers between 1-3650.
 error.invalid_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
 error.invalid_json_key=The request includes an unrecognized parameter ''{0}''. Please update or remove this parameter and retry your request.
