--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,6 +10,7 @@ error.excludes_all_charsets=The combination of parameters in the request is not 
 error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
 error.invalid_alternate_name=A provided alternative name is not a valid hostname or IP address. Please update this value and retry your request.
 error.invalid_extended_key_usage=The provided extended key usage ''{0}'' was not known. Please update this value and retry your request.
+error.invalid_key_usage=The provided key usage ''{0}'' was not known. Please update this value and retry your request.
 error.invalid_duration=Invalid duration specified. The supported duration values are whole numbers between 1-3650.
 error.invalid_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
 error.invalid_json_key=The request includes an unrecognized parameter ''{0}''. Please update or remove this parameter and retry your request.
