Extract service for finding CAs
Signed-off-by: Joe Moore <jmoore@pivotal.io>
Signed-off-by: Andrew Cantino <acantino@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,7 @@
 error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
 error.bad_authority_type=The request does not include a valid type. Please validate your input and retry your request.
 error.ca_name_missing=A CA name must be provided. Please validate your input and retry your request.
-error.ca_not_found=CA not found. Please validate your input and retry your request.
-error.ca_not_found_for_certificate_generation=The request could not be completed because the CA has not been defined. Please set the CA and retry your request.
+error.ca_not_found=The request could not be completed because the CA has not been defined. Please set the CA and retry your request.
 error.cannot_regenerate_non_generated_credentials=The credential could not be regenerated because the value was statically set. Only generated credentials may be regenerated.
 error.credential_not_found=Credential not found. Please validate your input and retry your request.
 error.default_ca_required=The request could not be completed because a default CA has not been defined. Please set a default CA or provide a named CA and retry your request.
