--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
 error.ca_not_found=The request could not be completed because the requested CA certificate could not be found. Please retry your request.
+error.cert_not_ca=The requested certificate cannot be signed by the given CA because the given CA is not a certificate authority. A certificate must contain the extension 'Certificate Authority: YES' to be used to sign other certificates.
 error.cannot_regenerate_non_generated_credentials=The credential could not be regenerated because the value was statically set. Only generated credentials may be regenerated.
 error.credential_not_found=Credential not found. Please validate your input and retry your request.
 error.default_ca_required=The request could not be completed because a default CA has not been defined. Please set a default CA or provide a named CA and retry your request.
