Throw if both self_sign and ca missing for a non-ca
[#137817083] User should receive error if generating certificate without self-sign and ca parameters

Signed-off-by: Isobel Redelmeier <iredelmeier@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,9 @@
 error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
 error.ca_not_found=The request could not be completed because the requested CA certificate could not be found. Please retry your request.
 error.cert_not_ca=The requested certificate cannot be signed by the given CA because the given CA is not a certificate authority. A certificate must contain the extension 'Certificate Authority: YES' to be used to sign other certificates.
+error.missing_signing_ca=You must specify a signing CA or indicate self-signing when generating a certificate. Please update and retry your request.
 error.cannot_regenerate_non_generated_credentials=The credential could not be regenerated because the value was statically set. Only generated credentials may be regenerated.
 error.credential_not_found=Credential not found. Please validate your input and retry your request.
-error.default_ca_required=The request could not be completed because a default CA has not been defined. Please set a default CA or provide a named CA and retry your request.
 error.excludes_all_charsets=The combination of parameters in the request is not allowed. Please validate your input and retry your request.
 error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
 error.invalid_alternate_name=A provided alternative name is not a valid hostname or IP address. Please update this value and retry your request.
