--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
+error.ca_and_self_sign=The parameters 'ca' and 'self-sign' cannot be used in combination. Please update and retry your request.
 error.ca_not_found=The request could not be completed because the requested CA certificate could not be found. Please retry your request.
 error.cert_not_ca=The requested certificate cannot be signed by the given CA because the given CA is not a certificate authority. A certificate must contain the extension 'Certificate Authority: YES' to be used to sign other certificates.
 error.missing_signing_ca=You must specify a signing CA or indicate self-signing when generating a certificate. Please update and retry your request.
