--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,12 +8,12 @@ error.credential_not_found=Credential not found. Please validate your input and 
 error.excludes_all_charsets=The combination of parameters in the request is not allowed. Please validate your input and retry your request.
 error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
 error.invalid_alternate_name=A provided alternative name is not a valid hostname or IP address. Please update this value and retry your request.
-error.invalid_extended_key_usage=The provided extended key usage ''{0}'' was not known. Please update this value and retry your request.
-error.invalid_key_usage=The provided key usage ''{0}'' was not known. Please update this value and retry your request.
+error.invalid_extended_key_usage=The provided extended key usage ''{0}'' is not supported. Valid values include 'client_auth', 'server_auth', 'code_signing', 'email_protection' and 'timestamping'.
+error.invalid_key_usage=The provided key usage ''{0}'' is not supported. Valid values include 'digital_signature', 'non_repudiation', 'key_encipherment', 'data_encipherment', 'key_agreement', 'key_cert_sign', 'crl_sign', 'encipher_only' and 'decipher_only'.
 error.invalid_duration=Invalid duration specified. The supported duration values are whole numbers between 1-3650.
 error.invalid_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
 error.invalid_json_key=The request includes an unrecognized parameter ''{0}''. Please update or remove this parameter and retry your request.
-error.invalid_key_length=The provided key length is not supported. Please validate your input and retry your request.
+error.invalid_key_length=The provided key length is not supported. Valid values include '2048', '3072' and '4096'.
 error.invalid_name_has_slash=A credential name cannot end with a '/' character. Credential names should be in the form of /[path]/[name] or [path]/[name]. Please update and retry your request.
 error.invalid_regenerate_parameters=No other parameters may be specified in combination with regenerate.
 error.invalid_token_signature=The request token signature could not be verified. Please validate that your request token was issued by the UAA server authorized by CredHub.
@@ -22,5 +22,5 @@ error.missing_certificate_parameters=At least one subject value, such as common 
 error.missing_name=A credential name must be provided. Please validate your input and retry your request.
 error.missing_rsa_ssh_parameters=At least one key value must be set. Please validate your input and retry your request.
 error.missing_string_secret_value=A non-empty value must be specified for the credential. Please validate and retry your request.
-error.type_invalid=The request does not include a valid type. Please validate your input and retry your request.
+error.type_invalid=The request does not include a valid type. Valid values include 'value', 'password', 'certificate', 'ssh' and 'rsa'.
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
