--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,7 +3,8 @@ error.ca_and_self_sign=The parameters 'ca' and 'self-sign' cannot be used in com
 error.ca_not_found=The request could not be completed because the requested CA certificate could not be found. Please retry your request.
 error.cert_not_ca=The requested certificate cannot be signed by the given CA because the given CA is not a certificate authority. A certificate must contain the extension 'Certificate Authority: YES' to be used to sign other certificates.
 error.missing_signing_ca=You must specify a signing CA or indicate self-signing when generating a certificate. Please update and retry your request.
-error.cannot_regenerate_non_generated_credentials=The credential could not be regenerated because the value was statically set. Only generated credentials may be regenerated.
+error.cannot_regenerate_non_generated_password=The password could not be regenerated because the value was statically set. Only generated passwords may be regenerated.
+error.cannot_regenerate_non_generated_certificate=The credential could not be regenerated because the certificate was statically set and is not self-signed or is invalid.
 error.credential_not_found=Credential not found. Please validate your input and retry your request.
 error.excludes_all_charsets=The combination of parameters in the request is not allowed. Please validate your input and retry your request.
 error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
