Surface an informative error when encryption key is missing for credential
[#139329727] User should receive handled error in CLI if attempting to access credential lacking encryption key

Signed-off-by: Kelly Gerritz <kgerritz@pivotal.io>
Signed-off-by: Edie Beer <ebeer@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,3 +25,4 @@ error.missing_rsa_ssh_parameters=At least one key value must be set. Please vali
 error.missing_string_secret_value=A non-empty value must be specified for the credential. Please validate and retry your request.
 error.type_invalid=The request does not include a valid type. Valid values include 'value', 'password', 'certificate', 'ssh' and 'rsa'.
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
+error.missing_encryption_key=The credential could not be accessed with the provided encryption keys. You must update your deployment configuration to continue.
