--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,3 +26,5 @@ error.missing_string_secret_value=A non-empty value must be specified for the cr
 error.type_invalid=The request does not include a valid type. Valid values include 'value', 'password', 'certificate', 'ssh' and 'rsa'.
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
 error.missing_encryption_key=The credential could not be accessed with the provided encryption keys. You must update your deployment configuration to continue.
+error.resource_not_found=The request could not be fulfilled because the resource could not be found.
+error.acl.invalid_operation=The provided operation is not supported. Valid values include read and write.
