--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,7 +15,7 @@ error.invalid_duration=Invalid duration specified. The supported duration values
 error.invalid_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
 error.invalid_json_key=The request includes an unrecognized parameter ''{0}''. Please update or remove this parameter and retry your request.
 error.invalid_key_length=The provided key length is not supported. Valid values include '2048', '3072' and '4096'.
-error.invalid_name_has_slash=A credential name cannot end with a '/' character. Credential names should be in the form of /[path]/[name] or [path]/[name]. Please update and retry your request.
+error.invalid_name_has_slash=A credential name cannot end with a '/' character or contain '//'. Credential names should be in the form of /[path]/[name] or [path]/[name]. Please update and retry your request.
 error.invalid_regenerate_parameters=No other parameters may be specified in combination with regenerate.
 error.invalid_token_signature=The request token signature could not be verified. Please validate that your request token was issued by the UAA server authorized by CredHub.
 error.missing_certificate_credentials=At least one certificate type must be set. Please validate your input and retry your request.
