Refactor SecretsController error handling
* Remove ResponseError and ResponseErrorType. We don't need a class +
enum to handle a single error message.

[#137313049] User should receive error if getting ACL where no resource exists

Signed-off-by: Edie Beer <ebeer@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
+error.bad_request=The request could not be fulfilled because the request path or body did not meet expectation. Please check the documentation for required formatting and retry your request.
 error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
 error.ca_and_self_sign=The parameters 'ca' and 'self-sign' cannot be used in combination. Please update and retry your request.
 error.ca_not_found=The request could not be completed because the requested CA certificate could not be found. Please retry your request.
