Clean up ACL errors
* Make ACL errors use message.properties more consistently
* Use NotEmpty instead of NotNull
* Import from fasterxml instead of codehaus
* Add more unit tests

[#137313049] User should receive error if getting ACL where no resource exists

Signed-off-by: Edie Beer <ebeer@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 error.bad_request=The request could not be fulfilled because the request path or body did not meet expectation. Please check the documentation for required formatting and retry your request.
+error.missing_query_parameter=The query parameter {0} is required for this request.
 error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
 error.ca_and_self_sign=The parameters 'ca' and 'self-sign' cannot be used in combination. Please update and retry your request.
 error.ca_not_found=The request could not be completed because the requested CA certificate could not be found. Please retry your request.
@@ -29,3 +30,5 @@ error.type_mismatch=The credential type cannot be modified. Please delete the cr
 error.missing_encryption_key=The credential could not be accessed with the provided encryption keys. You must update your deployment configuration to continue.
 error.resource_not_found=The request could not be fulfilled because the resource could not be found.
 error.acl.invalid_operation=The provided operation is not supported. Valid values include read and write.
+error.acl.missing_aces=At least one access control entry must be provided. Please validate your input and retry your request.
+error.acl.missing_operations=At least one operation must be provided. Please validate your input and retry your request.
