AccessControlDataService deleteAccessControlEntry and getAccessControlList now throw EntryNotFoundException when appropriate
added AccessEntryController exception handler for EntryNotFoundException

[#139761439] User should receive error if deleting ACE where none exists

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,3 +32,4 @@ error.resource_not_found=The request could not be fulfilled because the resource
 error.acl.invalid_operation=The provided operation is not supported. Valid values include read and write.
 error.acl.missing_aces=At least one access control entry must be provided. Please validate your input and retry your request.
 error.acl.missing_operations=At least one operation must be provided. Please validate your input and retry your request.
+error.acl.not_found=The request could not be fulfilled because the access control entry could not be found.
