--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,7 +24,7 @@ error.missing_certificate_credentials=At least one certificate type must be set.
 error.missing_certificate_parameters=At least one subject value, such as common name or organization, must be defined to generate the certificate. Please update and retry your request.
 error.missing_name=A credential name must be provided. Please validate your input and retry your request.
 error.missing_rsa_ssh_parameters=At least one key value must be set. Please validate your input and retry your request.
-error.missing_string_secret_value=A non-empty value must be specified for the credential. Please validate and retry your request.
+error.missing_value=A non-empty value must be specified for the credential. Please validate and retry your request.
 error.type_invalid=The request does not include a valid type. Valid values include 'value', 'password', 'certificate', 'ssh' and 'rsa'.
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
 error.missing_encryption_key=The credential could not be accessed with the provided encryption keys. You must update your deployment configuration to continue.
