Certificate set requests use Jackson and are de-monaded.
[#140581485] Use Jackson for certificate set requests

Signed-off-by: Ashwin Venkatesh <avenkatesh@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,7 +20,7 @@ error.invalid_key_length=The provided key length is not supported. Valid values 
 error.invalid_name_has_slash=A credential name cannot end with a '/' character or contain '//'. Credential names should be in the form of /[path]/[name] or [path]/[name]. Please update and retry your request.
 error.invalid_regenerate_parameters=No other parameters may be specified in combination with regenerate.
 error.invalid_token_signature=The request token signature could not be verified. Please validate that your request token was issued by the UAA server authorized by CredHub.
-error.missing_certificate_credentials=At least one certificate type must be set. Please validate your input and retry your request.
+error.missing_certificate_credentials=At least one certificate attribute must be set. Please validate your input and retry your request.
 error.missing_certificate_parameters=At least one subject value, such as common name or organization, must be defined to generate the certificate. Please update and retry your request.
 error.missing_name=A credential name must be provided. Please validate your input and retry your request.
 error.missing_rsa_ssh_parameters=At least one key value must be set. Please validate your input and retry your request.
