Throw an error when credential is not a NamedJSONSecret
[#139611609] VCAP_SERVICES object should template in json-type credential object according to SB contract

Signed-off-by: Andrew Cantino <acantino@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,3 +33,4 @@ error.acl.invalid_operation=The provided operation is not supported. Valid value
 error.acl.missing_aces=At least one access control entry must be provided. Please validate your input and retry your request.
 error.acl.missing_operations=At least one operation must be provided. Please validate your input and retry your request.
 error.acl.not_found=The request could not be fulfilled because the access control entry could not be found.
+error.invalid_interpolation_type=The credential ''{0}'' is not the expected type. A credhub-ref credential must be of type ''JSON''.
