--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -34,3 +34,4 @@ error.acl.missing_aces=At least one access control entry must be provided. Pleas
 error.acl.missing_operations=At least one operation must be provided. Please validate your input and retry your request.
 error.acl.not_found=The request could not be fulfilled because the access control entry could not be found.
 error.invalid_interpolation_type=The credential ''{0}'' is not the expected type. A credhub-ref credential must be of type ''JSON''.
+error.invalid_access=The request could not be completed because a reference credential could not be accessed. Please update and retry your request.
