Fixed type validations for generate.
- They cause the right messages to be returned
- They don't use custom validators
- The message names are a little less confusing (we don't have both
invalid_generate_type and generate_type_invalid anymore)

[#140582047] Use Jackson for password generate requests

Signed-off-by: Jacques Chester <jchester@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,7 +14,6 @@ error.invalid_alternate_name=A provided alternative name is not a valid hostname
 error.invalid_extended_key_usage=The provided extended key usage ''{0}'' is not supported. Valid values include 'client_auth', 'server_auth', 'code_signing', 'email_protection' and 'timestamping'.
 error.invalid_key_usage=The provided key usage ''{0}'' is not supported. Valid values include 'digital_signature', 'non_repudiation', 'key_encipherment', 'data_encipherment', 'key_agreement', 'key_cert_sign', 'crl_sign', 'encipher_only' and 'decipher_only'.
 error.invalid_duration=Invalid duration specified. The supported duration values are whole numbers between 1-3650.
-error.invalid_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
 error.invalid_json_key=The request includes an unrecognized parameter ''{0}''. Please update or remove this parameter and retry your request.
 error.invalid_key_length=The provided key length is not supported. Valid values include '2048', '3072' and '4096'.
 error.invalid_name_has_slash=A credential name cannot end with a '/' character or contain '//'. Credential names should be in the form of /[path]/[name] or [path]/[name]. Please update and retry your request.
@@ -25,7 +24,9 @@ error.missing_certificate_parameters=At least one subject value, such as common 
 error.missing_name=A credential name must be provided. Please validate your input and retry your request.
 error.missing_rsa_ssh_parameters=At least one key value must be set. Please validate your input and retry your request.
 error.missing_value=A non-empty value must be specified for the credential. Please validate and retry your request.
-error.type_invalid=The request does not include a valid type. Valid values include 'value', 'json', 'password', 'certificate', 'ssh' and 'rsa'.
+error.invalid_type_with_set_prompt=The request does not include a valid type. Valid values include 'value', 'json', 'password', 'certificate', 'ssh' and 'rsa'.
+error.invalid_type_with_generate_prompt=The request does not include a valid type. Valid values for generate include 'password', 'certificate', 'ssh' and 'rsa'.
+error.cannot_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
 error.missing_encryption_key=The credential could not be accessed with the provided encryption keys. You must update your deployment configuration to continue.
 error.resource_not_found=The request could not be fulfilled because the resource could not be found.
