--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,6 +24,7 @@ error.missing_certificate_parameters=At least one subject value, such as common 
 error.missing_name=A credential name must be provided. Please validate your input and retry your request.
 error.missing_rsa_ssh_parameters=At least one key value must be set. Please validate your input and retry your request.
 error.missing_value=A non-empty value must be specified for the credential. Please validate and retry your request.
+error.cannot_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
 error.invalid_type_with_set_prompt=The request does not include a valid type. Valid values include 'value', 'json', 'password', 'certificate', 'ssh' and 'rsa'.
 error.invalid_type_with_generate_prompt=The request does not include a valid type. Valid values for generate include 'password', 'certificate', 'ssh' and 'rsa'.
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
