--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,6 +27,7 @@ error.missing_value=A non-empty value must be specified for the credential. Plea
 error.cannot_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
 error.invalid_type_with_set_prompt=The request does not include a valid type. Valid values include 'value', 'json', 'password', 'certificate', 'ssh' and 'rsa'.
 error.invalid_type_with_generate_prompt=The request does not include a valid type. Valid values for generate include 'password', 'certificate', 'ssh' and 'rsa'.
+error.invalid_type_with_regenerate_prompt=The request does not include a valid type. Valid values for regenerate include 'password', 'certificate', 'ssh' and 'rsa'.
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
 error.missing_encryption_key=The credential could not be accessed with the provided encryption keys. You must update your deployment configuration to continue.
 error.resource_not_found=The request could not be fulfilled because the resource could not be found.
