--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -38,4 +38,5 @@ error.acl.not_found=The request could not be fulfilled because the access contro
 error.invalid_interpolation_type=The credential ''{0}'' is not the expected type. A credhub-ref credential must be of type ''JSON''.
 error.invalid_access=The request could not be completed because a reference credential could not be accessed. Please update and retry your request.
 error.auth.invalid_mtls_identity=The provided authentication mechanism does not provide a valid identity. Please contact your system administrator.
+error.auth.mtls_not_client_auth=The provided certificate is not authorized to be used for client authentication.
 error.request_validation_test=Request body was validated and ControllerAdvice worked.
