Require password for value for 'user' set
[#143462383] Password value should be required for 'user' type

Signed-off-by: Ashwin Venkatesh <avenkatesh@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,11 +17,11 @@ error.invalid_duration=Invalid duration specified. The supported duration values
 error.invalid_json_key=The request includes an unrecognized parameter ''{0}''. Please update or remove this parameter and retry your request.
 error.invalid_key_length=The provided key length is not supported. Valid values include '2048', '3072' and '4096'.
 error.invalid_name_has_slash=A credential name cannot end with a '/' character or contain '//'. Credential names should be in the form of /[path]/[name] or [path]/[name]. Please update and retry your request.
-error.invalid_regenerate_parameters=No other parameters may be specified in combination with regenerate.
 error.invalid_token_signature=The request token signature could not be verified. Please validate that your request token was issued by the UAA server authorized by CredHub.
 error.missing_certificate_credentials=At least one certificate attribute must be set. Please validate your input and retry your request.
 error.missing_certificate_parameters=At least one subject value, such as common name or organization, must be defined to generate the certificate. Please update and retry your request.
 error.missing_name=A credential name must be provided. Please validate your input and retry your request.
+error.missing_password=A password value must be specified for the credential. Please validate and retry your request.
 error.missing_rsa_ssh_parameters=At least one key value must be set. Please validate your input and retry your request.
 error.missing_value=A non-empty value must be specified for the credential. Please validate and retry your request.
 error.cannot_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
@@ -34,7 +34,6 @@ error.resource_not_found=The request could not be fulfilled because the resource
 error.acl.invalid_operation=The provided operation is not supported. Valid values include read, write, delete, read_acl, and write_acl.
 error.acl.missing_aces=At least one access control entry must be provided. Please validate your input and retry your request.
 error.acl.missing_operations=At least one operation must be provided. Please validate your input and retry your request.
-error.acl.not_found=The request could not be fulfilled because the access control entry could not be found.
 error.acl.lacks_acl_read=The request could not be completed because the ACL does not exist or you do not have sufficient authorization.
 error.acl.lacks_read=The request could not be completed because the credential does not exist or you do not have sufficient authorization.
 error.invalid_interpolation_type=The credential ''{0}'' is not the expected type. A credhub-ref credential must be of type ''JSON''.
