Refactor interpolation to use ObjectMapper
[#146339935] vcap endpoint should not expect VCAP_SERVICES as the top level key in the payload

Signed-off-by: Ashwin Venkatesh <avenkatesh@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,8 +36,8 @@ error.acl.missing_aces=At least one access control entry must be provided. Pleas
 error.acl.missing_operations=At least one operation must be provided. Please validate your input and retry your request.
 error.acl.lacks_acl_read=The request could not be completed because the ACL does not exist or you do not have sufficient authorization.
 error.acl.lacks_credential_write=The request could not be completed because the credential does not exist or you do not have sufficient authorization.
-error.invalid_interpolation_type=The credential ''{0}'' is not the expected type. A credhub-ref credential must be of type ''JSON''.
-error.invalid_access=The request could not be completed because a reference credential could not be accessed. Please update and retry your request.
+error.interpolation.invalid_type=The credential ''{0}'' is not the expected type. A credhub-ref credential must be of type ''JSON''.
+error.interpolation.invalid_access=The request could not be completed because a reference credential could not be accessed. Please update and retry your request.
 error.auth.invalid_mtls_identity=The provided authentication mechanism does not provide a valid identity. Please contact your system administrator.
 error.auth.mtls_not_client_auth=The provided certificate is not authorized to be used for client authentication.
 error.request_validation_test=Request body was validated and ControllerAdvice worked.
