User is unable to delete their own permissions
[#145242939] User should not be able to delete their own permissions

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,6 +32,7 @@ error.type_mismatch=The credential type cannot be modified. Please delete the cr
 error.missing_encryption_key=The credential could not be accessed with the provided encryption keys. You must update your deployment configuration to continue.
 error.resource_not_found=The request could not be fulfilled because the resource could not be found.
 error.acl.invalid_operation=The provided operation is not supported. Valid values include read, write, delete, read_acl, and write_acl.
+error.acl.invalid_update_operation=Modification of access control for the authenticated user is not allowed. Please contact an administrator.
 error.acl.missing_aces=At least one access control entry must be provided. Please validate your input and retry your request.
 error.acl.missing_operations=At least one operation must be provided. Please validate your input and retry your request.
 error.acl.lacks_acl_read=The request could not be completed because the ACL does not exist or you do not have sufficient authorization.
